@@ -4,11 +4,12 @@ $Id: RELEASE_NOTES.txt,v 1.16 2006/03/01 01:52:03 gregluck Exp $
 Release Notes For ehcache-debugger
 ==================================
 
+This version of the debugger works with Ehcache 1.7.0.
+
 See http://ehcache.sourceforge.net/documentation/remotedebugger.html for full documentation including installation and configuration.
 
 For the impatient:
 
-java -classpath backport-util-concurrent-3.1.jar:commons-logging-1.0.4.jar:commons-collections-3.2.jar:jsr107cache-1.0.jar 
--jar ehcache-debugger-1.5.0.jar ehcache.xml sampleCache1
+java -classpath slf4j-api-1.5.8.jar:slf4j-jdk14-1.5.8.jar -jar ehcache-debugger-1.7.1.jar ehcache.xml sampleCache1
 
 
