@@ -1,6 +1,14 @@
 $Id: CHANGELOG.txt,v 1.31 2006/03/07 00:05:56 gregluck Exp $
 
 
+ehcache-debuuger-1.7.1
+======================
+
+1. Code cleanup
+2. Changed logging to SLF4J
+3. Updated to Ehcache-1.7.1
+
+
 ehcache-debuuger-1.5.0
 ======================
 
